--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Days+One|Roboto+Slab" rel="stylesheet">
 
 
 </head>
@@ -29,7 +30,7 @@
   <nav id="navbar" class="navbar navbar-expand-lg  fixed-top py-3 order-0" id="mainNav">
 
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><b>EDS-India</b></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,25 +39,25 @@
 
           <ul class="nav navbar-nav navbar-center">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services"><b>Services</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#products">Products</a>
+              <a class="nav-link js-scroll-trigger" href="#products"><b>Products</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#projects"><b>Projects</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#news">News</a>
+              <a class="nav-link js-scroll-trigger" href="#news"><b>News</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#career">Career</a>
+              <a class="nav-link js-scroll-trigger" href="#career"><b>Career</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact"><b>Contact</b></a>
             </li>
 
           </ul>
@@ -79,23 +80,26 @@
     <div class="carousel-inner" role="listbox">
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active slide1" >
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="display-4">First Slide</h2>
-          <p class="lead">This is a description for the first slide.</p>
+        <div class="carousel-caption ">
+          <img id="slide1logo" class="img-responsive" src="public/images/logo1.png">
+
+
+          <p class="lead">EDS India is a group of experienced industry veterans providing technology solutions to its partners, established with the aim to enrich our valued customers with today’s growing technology demands. </p>
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item slide2" >
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="display-4">Second Slide</h2>
-          <p class="lead">This is a description for the second slide.</p>
+        <div class="carousel-caption">
+          <img id="slide1logo" class="img-responsive" src="public/images/logo2.png">
+          <p class="lead">We offer professional design services which include hardware and software development, customizable product designs, Systems Engineering and Solutions to assist our end customers grow in this high speed techno-commercial era. </p>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item slide3" s>
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="display-4">Third Slide</h2>
-          <p class="lead">This is a description for the third slide.</p>
+        <div class="carousel-caption ">
+          <img id="slide1logo" class="img-responsive" src="public/images/logo3.png">
+
+          <p class="lead">EDS-India uses latest technologies to market, through its rich knowledge acquired by research and developments. It operates in various domains of communication, wireless, control system, networking, embedded systems, LED lighting & single/true colour LED Displays. EDS-India is a group of highly experienced and motivated technocrats. </p>
         </div>
       </div>
     </div>
@@ -111,14 +115,98 @@
 </header>
 
 <!-- Carousel Ends -->
-ssssssssssssss
-sssssssssssssss
-ssssssssss
+<div class="info container-fluid">
+  <div class="row">
+    <div class="col0 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2>Our Mission</h2><hr>
+          Our Mission is to provide robust technology solutions to our valued customers and securing the best position in the eyes of our customers and employees.
+        </div>
+        <div class="card-footer">
+          .
+        </div>
+
+
+      </div>
+    </div>
+
+    <div class="col0 col-sm-4" >
+    <div class="card">
+      <div class="card-body">
+        <h2>Our Vision</h2><hr>
+        Our Vision is to be a single source solution provider enabling our customers rise the ladder of success
+      </div>
+      <div class="card-footer">
+        .
+      </div>
+    </div>
+  </div>
+
+    <div class="col0 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2>Our Values</h2><hr>
+          We strongly believe that our success lies in the growth of our employees, as elucidated by our mission statement. Our team is highly motivated with the growing achievements of the organization, and thus each member finds their best version every day.
+        </div>
+        <div class="card-footer">
+          .
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="conatiner fluid cont2" align="center">
+    <div class="container-fluid cont2a">Embedded Designs Services</div>
+    <div class="container-fluid cont2b">Converting Concept To Reality</div>
+    <hr>
+    <img id="bow" src="public/images/lbr.png">
+    <div class="container-fluid cont2c">Our Success Stories</div>
+    <div class="row typing" align="center">
+      <div class="col-sm-2" align="left"></div>
+      <div class="col-sm-4" align="left">
+        <h1>Railways:
+        <span id="type"
+         class="txt-rotate"
+         data-period="2000"
+         data-rotate='[ "Agra", "Guwahati", "Ambala", "Burdwan", "Bhubneshwar","Chennai", "Dhanbad","Howrah", "Kharagpur","Kota", "Sealdah"]'></span>
+       </h1>
+       <br>
+       <h1>Airports:
+         <span id="type"
+         class="txt-rotate"
+         data-period="2000"
+         data-rotate='[ "Ahmedabad","Imphal","Tuticorin", "Silchar","Lucknow","Rajkot", "Amritsar","Aurangabad","Delhi T1C", "Dehradun" ]'></span>
+       </h1>
+     </div>
+     <div class="col-sm-4">
+       <div class="container-fluid cont2d" align="left">
+         More than 150 Railway stations and 50+ Airports exibits Passengers Informations
+         Systems Designed by Team EDS. 25K+ Vehicle uses EDS Designed tracking units,
+         Photographers accross South Asia use Camera Flashes and studio
+         lighting products design at EDS. EDS in participation with IIT, Madras developed E-Vehicle Tracking units for
+          E-Vehicle Battery managment first of its kind in India.</div>
+     </div>
+     <div class="col-sm-2" align="left"></div>
+    </div>
+
+
+</div>
+<img src="public/images/img1.png" id="i0">
+
+</div>
+
+
+
+
+
 
 
 <!-- Plugin JavaScript -->
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="public/script/script.js"></script>
 
 </body>
 </htm>
