Carousel waterwheel removed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 
-<body data-aos-easing="ease-out-back" data-aos-duration="1000" data-aos-delay="0" style="overflow: visible; height: initial;" class="fp-viewing-0-0 fp-responsive">
+<body >
 
   <!-- NAVBAR -->
   <nav id="navbar" class="navbar navbar-expand-lg  fixed-top py-3 order-0" id="mainNav">
@@ -165,23 +165,23 @@
     <div class="container-fluid cont2c">Our Success Stories</div>
     <div class="row typing" align="center">
       <div class="col-sm-2" align="left"></div>
-      <div class="col-sm-4" align="left">
-        <h1>Railways:
+      <div class="col-sm-3 type2" align="left">
+        <div>Railways:
         <span id="type"
          class="txt-rotate"
          data-period="2000"
          data-rotate='[ "Agra", "Guwahati", "Ambala", "Burdwan", "Bhubneshwar","Chennai", "Dhanbad","Howrah", "Kharagpur","Kota", "Sealdah"]'></span>
-       </h1>
+       </div>
        <br>
-       <h1>Airports:
+       <div>Airports:
          <span id="type"
          class="txt-rotate"
          data-period="2000"
          data-rotate='[ "Ahmedabad","Imphal","Tuticorin", "Silchar","Lucknow","Rajkot", "Amritsar","Aurangabad","Delhi T1C", "Dehradun" ]'></span>
-       </h1>
+       </div>
      </div>
-     <div class="col-sm-4">
-       <div class="container-fluid cont2d" align="left">
+     <div class="col-sm-5">
+       <div class="container-fluid cont2d" align="justify">
          More than 150 Railway stations and 50+ Airports exibits Passengers Informations
          Systems Designed by Team EDS. 25K+ Vehicle uses EDS Designed tracking units,
          Photographers accross South Asia use Camera Flashes and studio
@@ -192,10 +192,93 @@
     </div>
 
 
+
+
+</div>
+
 </div>
 <img src="public/images/img1.png" id="i0">
 
+
+
+<div id="waterwheel-carousel">
+  <div class="char">
+  <img class="carouselimg" src="public/images/member/SROY.png" />
+  </div>
+  <div class="char">
+  <img class="carouselimg"  src="public/images/member/dileep.png" />
+    </div>
+  <div class="char">
+  <img class="carouselimg"  src="public/images/member/naveen.png" />
+    </div>
+  <div class="char">
+    <img class="carouselimg"  src="public/images/member/vijay.png" />
+      </div>
+    
+
 </div>
+<a href="#" id="prev">Prev</a> | <a href="#" id="next">Next</a>
+
+
+
+
+
+
+<div class="clients container-fluid" align="center">
+
+  <div class="clientHead" align="center">Our Clients and Partners</div><hr>
+  <div class="row clt0">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/22M.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/AAI.jpg"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/Court.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/DAT.jpg"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/EEC.png"></div>
+    <div class="col-sm-1"></div>
+  </div>
+  <div class="row clt0">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/GEM.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/GMR.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/GVK.jpg"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/IDDS.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/iitm.png"></div>
+    <div class="col-sm-1"></div>
+  </div>
+  <div class="row clt0">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/IR.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/KMetro.jpg"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/lohia.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/miracle.png"></div>
+    <div class="col-sm-2"><img class="partners" src="public/images/clients/Nippon.jpg"></div>
+    <div class="col-sm-1"></div>
+  </div>
+</div>
+
+<footer class="pagefooter">
+  <div class="row ">
+    <div class="col-sm-4">
+      Embedded Designs Services India Private Limited<br>
+      D1A/A3, Sewa Marg, D-Block Janakpuri<br>
+      New Delhi - 110058, INDIA
+      <br>
+    </div>
+    <div class="col-sm-4">
+      Our Alternate Website Address : www.eds-india.com<br>
+      email : info@eds-india.com / info@eds-india.in<br>
+
+      Contacts : 9910022166 / 9717002230 / 9999985699
+
+    </div>
+    <div class="col-sm-4"></div>
+
+    <div class="container-fluid copyright" align="left">&copy 2018 EMBEDDED DESIGNS SERVICES INDIA PVT. LTD. All Rights Reserved.</div>
+  </div>
+
+</footer>
+
+
 
 
 
@@ -204,9 +287,12 @@
 
 
 <!-- Plugin JavaScript -->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="https://www.jqueryscript.net/demo/jQuery-Waterwheel-Carousel-Plugin/js/jquery.waterwheelCarousel.min.js"></script>
+</head>
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="public/script/script.js"></script>
 
 </body>
-</htm>
+</html>
