Landing Page completed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         <div class="carousel-caption ">
           <img id="slide1logo" class="img-responsive" src="public/images/logo1.png">
 
-
           <p class="lead">EDS India is a group of experienced industry veterans providing technology solutions to its partners, established with the aim to enrich our valued customers with today’s growing technology demands. </p>
         </div>
       </div>
@@ -116,7 +115,7 @@
 
 <!-- Carousel Ends -->
 <div class="info container-fluid">
-  <div class="row">
+  <!-- <div class="row">
     <div class="col0 col-sm-4">
       <div class="card">
         <div class="card-body">
@@ -154,7 +153,74 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
+  <div class="container-fluid">
+    <div class="wwdHead">What We Do<br><b>____</b></div>
+    <div class="row  wwdInner">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-10 ">
+        <div class="row">
+
+          <div class="col-sm-3">
+            <div class="card c1">
+              <div class="card-body">
+
+              </div>
+              <div class="card-footer foot">
+                PCB  & <br>
+                Hardware Architecture
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-3">
+            <div class="card c3">
+              <div class="card-body">
+
+              </div>
+              <div class="card-footer foot">
+                Vehical Tracking <br>
+                System
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-sm-3">
+            <div class="card c4">
+              <div class="card-body ">
+
+              </div>
+              <div class="card-footer foot">
+                Passenger Information  <br>
+                System
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-3 ">
+            <div class="card c2">
+              <div class="card-body">
+
+              </div>
+              <div class="card-footer foot">
+                Software Development  & <br>
+                Android Application
+              </div>
+            </div>
+
+          </div>
+
+
+
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-sm-1"></div>
+    </div>
 
 
   <div class="conatiner fluid cont2" align="center">
@@ -199,35 +265,113 @@
 </div>
 <img src="public/images/img1.png" id="i0">
 
+<div class="section2">
+<div id="about" align="center">Who are We?</div>
+<div class="row">
+<div class="col-sm-4" align="center"><img src="public/images/pcb4.png" width="400vh" height="auto" ></div>
+<div class="col-sm-7 about_content" align="justify">
 
 
-<div id="waterwheel-carousel">
-  <div class="char">
-  <img class="carouselimg" src="public/images/member/SROY.png" />
-  </div>
-  <div class="char">
-  <img class="carouselimg"  src="public/images/member/dileep.png" />
-    </div>
-  <div class="char">
-  <img class="carouselimg"  src="public/images/member/naveen.png" />
-    </div>
-  <div class="char">
-    <img class="carouselimg"  src="public/images/member/vijay.png" />
-      </div>
-    
+Embedded Designs Services India Pvt. Ltd. is among the 20 most promising electronics designs service provider company in India.
+Travelling ahead of time, trends and burgeoning technology demand driven by its rich R&D efforts, EDS India caters to every requirement in the
+electronics product development domain under one roof, starting right from Architecture Design to complete Hardware, Software & Mobile Apps
+
+Embedded Designs Services India Pvt. Ltd. is a group of experienced industry veterans providing technology solutions to its partners,
+established with the aim to enrich our valued customers with today’s growing technology demands. We offer professional design services to enable our end customers
+to grow in this high speed techno-commercial era.
+
+We at EDS India provide solutions in field of embedded electronics, power electronics, analog and digital design starting from the paper
+concept to the working prototypes. With an average industry experience of over 15 years our team is motivated and capable to provide robust solution for our customers and partners. We along with our partners have setups accross India thus can extend our solution at pan India levels, we at EDS India are capable to provide support to our end customers across all geographical locations in India.
 
 </div>
-<a href="#" id="prev">Prev</a> | <a href="#" id="next">Next</a>
+<div class="col-sm-1"></div>
+</div>
 
 
 
+<!-- TEAM -->
+<div class="container-fluid contCard">
+  <div class="row">
+    <div class="head">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/SROY.png" width="250px" height="auto">
+          </div>
+          <div class="back">
 
+            <div class="bio"><br>
+             Has more than 23 years of industry experience in Project Management, Designing for Analog & Digital Circuits, Embedded Controls, Power electronics, Hardware & Software development
+           </div>
+          </div>
+        </div>
+        <div class="name"><b>Managing Director<br> Mr. Santanu Roy</b></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid contCard">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/naveen.png" width="250px" height="auto">
+          </div>
+          <div class="back">
+            <div class="bio"><br> More than 6 Years of Experience in Hardware design Mr. Naveen takes care of the Hardware development team and manages the production line helping in converting designs to reality.
+           </div>
+
+          </div>
+        </div>
+        <div class="name"><b>Hardware Design<br> Mr. Naveen Dagar</b></div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/vijay.png" width="220px" height="auto">
+          </div>
+          <div class="back">
+
+            <div class="bio"><br> With 20 years of Experience in Ops and Customer support  he is a backbone to this organization. He has also worked for the Indian Railways Passenger information System.
+           </div>
+
+          </div>
+        </div>
+        <div class="name"><b>Operations<br> Mr. Vijay Kumar</b></div>
+      </div>
+
+    </div>
+    <div class="col-sm-4">
+      <div class="inner-container">
+        <div class="main">
+          <div class="front">
+            <img src="public/images/member/dileep.png" width="250px" height="auto">
+          </div>
+          <div class="back">
+
+            <div class="bio"><br>  With More than 6 Years of Experience Mr. Dileep plays a key role in defining and executing the design activities. Mr. Singh is also a certified Auditor from Quality Austria for our ISO Process.
+           </div>
+
+          </div>
+        </div>
+        <div class="name"><b>Software Design<br> Mr. Dileep Singh</b></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- TEAM -->
+
+</div>
 
 
 <div class="clients container-fluid" align="center">
 
   <div class="clientHead" align="center">Our Clients and Partners</div><hr>
-  <div class="row clt0">
+  <marquee BEHAVIOR="alternate" SCROLLAMOUNT="6" DIRECTION="down"><div class="row clt0">
     <div class="col-sm-1"></div>
     <div class="col-sm-2"><img class="partners" src="public/images/clients/22M.png"></div>
     <div class="col-sm-2"><img class="partners" src="public/images/clients/AAI.jpg"></div>
@@ -236,6 +380,7 @@
     <div class="col-sm-2"><img class="partners" src="public/images/clients/EEC.png"></div>
     <div class="col-sm-1"></div>
   </div>
+</marquee>
   <div class="row clt0">
     <div class="col-sm-1"></div>
     <div class="col-sm-2"><img class="partners" src="public/images/clients/GEM.png"></div>
