Products page completed

--- a/demo.html
+++ b/demo.html
@@ -26,45 +26,15 @@
 
 <body >
 
-
-  <div class="flex-gallery">
-  <div class="flex-gallery__item" style="background-image: url(http://lorempixel.com/800/800/cats)">
-    <div class="flex-gallery__content">
-      <div>this</div>
-      <div>FLEXBOX</div>
-      <div>slider</div>
-    </div>
-  </div>
-  <div class="flex-gallery__item" style="background-image: url(http://lorempixel.com/800/800/food)">
-    <div class="flex-gallery__content">
-      <div>this</div>
-      <div>FLEXBOX</div>
-      <div>slider</div>
-    </div>
-  </div>
-  <div class="flex-gallery__item" style="background-image: url(http://lorempixel.com/800/800/nature)">
-    <div class="flex-gallery__content">
-      <div>this</div>
-      <div>FLEXBOX</div>
-      <div>slider</div>
-    </div>
-  </div>
-  <div class="flex-gallery__item" style="background-image: url(http://lorempixel.com/800/800/food/)">
-    <div class="flex-gallery__content">
-      <div>this</div>
-      <div>FLEXBOX</div>
-      <div>slider</div>
-    </div>
-  </div>
-  <div class="flex-gallery__item" style="background-image: url(http://lorempixel.com/800/800/)">
-    <div class="flex-gallery__content">
-      <div>this</div>
-      <div>FLEXBOX</div>
-      <div>slider</div>
-    </div>
-  </div>
-</div>
-
+  <ul>
+    <li>Completely Indigenized Indian Design (Patented*)</li>
+    <li>Highly Modular</li>
+    <li>Digital Intensity & Contrast Control</li>
+    <li>PWM based Drive technology to improve LED life span</li>
+    <li>Lowest Power / Sq Meters</li>
+    <li>Inbuilt Soft start to limit in-rush current and provide stable operation over life</li>
+    <li>Temperature Controllerd Force cooling for increased life of cooling fans.</li>
+  </ul>
 
 
 
