--- a/src/products.html
+++ b/src/products.html
@@ -148,13 +148,13 @@
 
 
 
-<div class="videowall conatiner" align="center">LED Video Walls</div>
-<div class="table1Head">Features</div>
-<div class="container-fluid feat1" align="center">
+
+<div class="table1Head container" align="left"><b>Features</b></div>
+<div class="container feat1" align="center">
   <table class="table1 table-responsive highlight">
-            <thead>
+            <thead class="thead1">
               <tr>
-                <th>Paramaters</th>
+                <th>Parameters</th>
                 <th>P16 Outdoor</th>
                 <th>P10 Outdoor</th>
                 <th>P10 Indoor</th>
@@ -163,84 +163,84 @@
             </thead>
             <tbody>
               <tr>
-        <th>Pixel Pitch</th>
+        <th class="th1">Pixel Pitch</th>
                 <td>16</td>
                 <td>10</td>
                 <td>10</td>
                 <td>6</td>
         </tr>
               <tr>
-                <th>Pixel Density</th>
+                <th class="th1">Pixel Density</th>
                 <td>3906</td>
                 <td>10000</td>
                 <td>10000</td>
                 <td>27556</td>
         </tr>
               <tr>
-                <th>Pixel Configuration</th>
+                <th class="th1">Pixel Configuration</th>
                 <td>1R 1G 1B</td>
                 <td>1R 1G 1B</td>
                 <td>3-In-1 RGB SMD</td>
                 <td>3-In-1 RGB SMD</td>
       </tr>
               <tr>
-                <th>LED Life</th>
+                <th class="th1">LED Life</th>
                 <td> </td>
                 <td>100000</td>
                 <td>HOUR</td>
                 <td> </td>
       </tr>
       <tr>
-                <th>Module Dimension (mm)</th>
+                <th class="th1">Module Dimension (mm)</th>
                 <td>1280 x 1280</td>
                 <td>960 x 960</td>
                 <td>960 x 960</td>
                 <td>768 x 576</td>
       </tr>
       <tr>
-                <th>Module Weight (Kg)</th>
+                <th class="th1">Module Weight (Kg)</th>
                 <td>50</td>
                 <td>45</td>
                 <td>38</td>
                 <td>26</td>
       </tr>
       <tr>
-              <th>Power Consumption (W) / Module</th>
+              <th class="th1">Power Consumption (W) / Module</th>
                 <td>1000</td>
                 <td>800</td>
                 <td>580</td>
                 <td>450</td>
         </tr>
       <tr>
-              <th>Input Power</th>
+              <th class="th1">Input Power</th>
                 <td>130V AC</td>
                 <td>To</td>
                 <td>270V AC</td>
                 <td> </td>
         </tr>
       <tr>
-              <th>Best Viewing Distance (Feet)</th>
+              <th class="th1">Best Viewing Distance (Feet)</th>
                 <td>16</td>
                 <td>10</td>
                 <td>10</td>
                 <td>6</td>
       </tr>
       <tr>
-              <th>Viewing Angle</th>
+              <th class="th1">Viewing Angle</th>
                 <td>110°</td>
                 <td>Horizontal</td>
                 <td>60°</td>
                 <td>Vertical</td>
       </tr>
       <tr>
-              <th>Brightness (NIT)</th>
+              <th class="th1">Brightness (NIT)</th>
                 <td>12000</td>
                 <td>9000</td>
                 <td>6000</td>
                 <td>2500</td>
       </tr>
       <tr>
-              <th>Operating Temperature</th>
+              <th class="th1">Operating Temperature</th>
                 <td>0°C - 80°C</td>
                 <td>0°C - 80°C</td>
                 <td>0°C - 70°C</td>
@@ -248,7 +248,7 @@
       </tr>
 
       <tr>
-              <th>IP Grade</th>
+              <th class="th1">IP Grade</th>
                 <td>IP65(Back)/ IP66(Front)</td>
                 <td>IP65(Back)/ IP66(Front)</td>
                 <td>IP54(Back)/ IP54(Front)</td>
@@ -256,7 +256,7 @@
       </tr>
 
       <tr>
-              <th>Scanning</th>
+              <th class="th1">Scanning</th>
                 <td>1:4</td>
                 <td>1:4</td>
                 <td>1:8</td>
@@ -264,10 +264,280 @@
       </tr>
             </tbody>
           </table>
+</div>
+
+<!-- Device USP -->
+<div class="usp1Head container">Universal Selling Point</div>
+<div class="usp1 container">
+  <div class="row">
+     <div class="card card_usp">
+       <div class="card-content">
+
+         <ul>
+           <li>1. Completely Indigenized Indian Design (Patented*)</li>
+           <li>2. Highly Modular</li>
+           <li>3. Digital Intensity & Contrast Control</li>
+           <li>4. PWM based Drive technology to improve LED life span</li>
+           <li>5. Lowest Power / Sq Meters</li>
+           <li>6. Inbuilt Soft start to limit in-rush current and provide stable operation over life</li>
+           <li>7. Temperature Controllerd Force cooling for increased life of cooling fans.</li>
+         </ul>
+
+       </div>
+      </div>
+   </div>
+ </div>
+ <div class="table1Head container" align="left"><b>Product Specifications</b></div>
+ <div class="container feat2" align="center">
+   <div>
+            <table class="table2 highlight " style="width: 100%">
+              <thead class="thead2">
+                <tr>
+                  <th>Parameters</th>
+                  <th>Rating</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th class="th2">Power Input</th>
+                  <td>130V AV to 3270V AC</td>
+                </tr>
+                <tr>
+                  <th class="th2">CPU</th>
+                  <td>ARM Cotex-M4 @180Mhz</td>
+				</tr>
+				<tr>
+                  <th class="th2">External Memory </th>
+                  <td>16 MB Flash </td>
+                </tr>
+				<tr>
+	              <th class="th2">Wired Communication</th>
+                  <td>Ethernet / LAN </td>
+				</tr>
+              </tbody>
+          </table>
+          </div>
+</div>
+
+<!-- End of Device USP -->
+
+
+
+
+<!-- ___________________________________________________________________________ -->
+<!-- LED VMS CONTROLLER -2ND PRODUCT -->
+
+<HR>
+<!-- FLEXBOX GALLERY -->
+<div class="container-fluid">
+  <div class="feat1Head">LED VIDEO MESSAGE SIGN (VMS) CONTROLLER<br><b>____</b></div>
+  <div class="row  feat1gal">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10 ">
+      <div class="row">
+
+        <div class="col-sm-3">
+          <div class="card c1b">
+            <div class="card-body">
+
+            </div>
+            <!-- <div class="card-footer foot">
+              P6 INDOOR <br>
+              Dehradun Airport
+            </div> -->
+          </div>
+        </div>
+
+
+        <div class="col-sm-3">
+          <div class="card c2b">
+            <div class="card-body">
+
+            </div>
+            <!-- <div class="card-footer foot">
+              P10 INDOOR <br>
+              Railway Station
+            </div> -->
+
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card c3b">
+            <div class="card-body">
+
+            </div>
+            <!-- <div class="card-footer foot">
+              P10 OUTDOOR <br>
+              Pune Airport
+            </div> -->
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card c4b">
+            <div class="card-body">
+
+            </div>
+            <!-- <div class="card-footer foot">
+              P16 OUTDOOR <br>
+              Agra Railways Station
+            </div> -->
+          </div>
+        </div>
+
+        </div>
+      </div>
+
     </div>
 
 
 
+    <div class="col-sm-1"></div>
+  </div>
+<!-- END OF FLEXBOX GALLERY -->
+
+
+
+
+<div class="table1Head container" align="center"><b>Features</b></div>
+<div class="container feat1" align="center">
+  <div class="table-responsive">
+            <table class="table highlight">
+              <thead class="thead1">
+                <tr>
+                  <th>Parameters</th>
+                  <th>LED VMS Controller</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th class="th1">Input Power</th>
+                  <td>5V DC</td>
+                </tr>
+                <tr>
+                  <th class="th1" >Operating Temperature</th>
+                  <td>-20°C ~ +85°C</td>
+                </tr>
+                <tr>
+                  <th class="th1">Storage Temperature</th>
+                  <td>-40°C ~ +85°C</td>
+                </tr>
+                <tr>
+                  <th class="th1">Supported LED Matrix</th>
+                  <td>192 x 128</td>
+                </tr>
+				<tr>
+                  <th class="th1">Supported Scanning</th>
+                  <td>1:4</td>
+				</tr>
+				<tr>
+	              <th class="th1">Refresh Rate</th>
+                  <td>Upto 700Hz</td>
+				</tr>
+				<tr>
+                  <th class="th1">CPU</th>
+                  <td>ARM Cortex M4 @ 180MHz</td>
+                </tr>
+				<tr>
+	              <th class="th1">Internal Flash</th>
+                  <td>Upto 1MB/td&gt;
+               	</td></tr>
+				<tr>
+	              <th class="th1">Internal RAM</th>
+                  <td>Upto 256 KB</td>
+                </tr>
+				<tr>
+	              <th class="th1">External Flash</th>
+                  <td>Upto 64 MB</td>
+                </tr>
+				<tr>
+	              <th class="th1">Wired Communication</th>
+                  <td>10/100/1000 MBPS LAN</td>
+                </tr>
+				<tr>
+	              <th class="th1">Wireless Communication</th>
+                  <td>Wi-Fi, GPRS</td>
+                </tr>
+
+              </tbody>
+            </table>
+          </div>
+</div>
+
+<!-- Device USP -->
+<div class="usp1Head container">Universal Selling Point</div>
+<div class="usp1 container">
+  <div class="row">
+     <div class="card card_usp">
+       <div class="card-content">
+
+         <ul>
+					<li>1. Single Control Card to drive 192x128 LED matrix. </li>
+					<li>2. 1:4 scanning rate with up to 700 Hz refresh rate.</li>
+					<li>3. Supported communication – LAN / Wi-Fi or GPRS</li>
+					<li>4. Internal System Memory – 1MB, Storage Memory – 16 MB, SRAM – 256 KB</li>
+					<li>5. Remote debugging to diagnose problems remotely.</li>
+					<li>6. Smart self diagnostic feature.</li>
+					<li>7. Remote control for display ON/OFF.</li>
+					<li>8. FOTA (firmware updating via GPRS).</li>
+					<li>9. Can pick images/data from any TCP/HTTP/FTP servers via LAN / Wi-Fi / GPRS.</li>
+					<li>10. Multiple display effects.</li>
+					<li>11. Auto / manual paging.</li>
+					<li>12. Directivity – 90°(H) 45° (V)</li>
+					<li>13. Visibility – 50 Meters or more</li>
+					<li>14. Brightness &gt; 5000 NIT</li>
+					<li>15. LED life – 100000 Hours</li>
+       		  </ul>
+
+       </div>
+      </div>
+   </div>
+ </div>
+ <div class="table1Head container" align="left"><b>Product Specifications</b></div>
+ <div class="container feat2" align="center">
+   <div>
+     <table class="table2 highlight " style="width: 100%">
+       <thead class="thead2">
+         <tr>
+           <th >Parameters</th>
+           <th >Rating</th>
+         </tr>
+       </thead>
+       <tbody>
+         <tr>
+           <th class="th2">Power Input</th>
+           <td>5V DC </td>
+         </tr>
+         <tr>
+           <th class="th2">Current Consumption</th>
+           <td>Normal ~ 80mA; Peak ~ 500A </td>
+         </tr>
+        <tr>
+           <th class="th2">Operating Temp (Storage Temp)</th>
+           <td> -20°C to +85°C (-10°C to +85 °C)  </td>
+         </tr>
+ <tr>
+           <th class="th2">CPU</th>
+           <td>ARM Cotex-M4 @180Mhz </td>
+ </tr>
+ <tr>
+           <th class="th2">External Memory </th>
+           <td>Upto 64MB Flash </td>
+         </tr>
+ <tr>
+         <th class="th2">GSM /GPRS MODEM</th>
+           <td>850/900/1800/1900 MHz Quad Band, Multi Slot (12/10/8), Class B GPRS Module  </td>
+ </tr>
+ <tr>
+         <th class="th2">GSM Antenna </th>
+           <td>Internal </td>
+ </tr>
+       </tbody>
+     </table>
+   </div>
+          </div>
+</div>
+
+<!-- End of Device USP -->
 
 <footer class="pagefooter">
   <div class="row ">
@@ -275,7 +545,7 @@
       Embedded Designs Services India Private Limited<br>
       D1A/A3, Sewa Marg, D-Block Janakpuri<br>
       New Delhi - 110058, INDIA
-      <br>/
+      <br>
     </div>
     <div class="col-sm-4">
       Our Alternate Website Address : www.eds-india.com<br>
