--- a/demo.html
+++ b/demo.html
@@ -26,15 +26,63 @@
 
 <body >
 
-  <ul>
-    <li>Completely Indigenized Indian Design (Patented*)</li>
-    <li>Highly Modular</li>
-    <li>Digital Intensity & Contrast Control</li>
-    <li>PWM based Drive technology to improve LED life span</li>
-    <li>Lowest Power / Sq Meters</li>
-    <li>Inbuilt Soft start to limit in-rush current and provide stable operation over life</li>
-    <li>Temperature Controllerd Force cooling for increased life of cooling fans.</li>
-  </ul>
+  <div class="container">
+
+  <div class="slider-containers">
+
+    <!--effect #1 -->
+    <div class="slider-container">
+      <h2>Effect #1</h2>
+      <div class="flexbox-slider flexbox-slider-1">
+        <div class="flexbox-slide">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-1.jpg" alt="Slide Image">
+          <div class="text-block">
+            <h3>Slide #1 is here</h3>
+            <div class="text">
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+            </div>
+          </div>
+        </div>
+        <div class="flexbox-slide">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-2.jpg" alt="Slide Image">
+          <div class="text-block">
+            <h3>Slide #2 is here</h3>
+            <div class="text">
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+            </div>
+          </div>
+        </div>
+        <div class="flexbox-slide">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-3.jpg" alt="Slide Image">
+          <div class="text-block">
+            <h3>Slide #3 is here</h3>
+            <div class="text">
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+            </div>
+          </div>
+        </div>
+        <div class="flexbox-slide">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-4.jpg" alt="Slide Image">
+          <div class="text-block">
+            <h3>Slide #4 is here</h3>
+            <div class="text">
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+            </div>
+          </div>
+        </div>
+        <div class="flexbox-slide">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-9.jpg" alt="Slide Image">
+          <div class="text-block">
+            <h3>Slide #5 is here</h3>
+            <div class="text">
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
